@@ -1,9 +1,9 @@
 # From: https://en.wikipedia.org/wiki/Names_of_large_numbers
 .numbers <- data.frame(
-                name=c("Thousand", "Million", "Billion", "Trillion", "Quadrillion", "Quintillion", "Sextillion", "Septillion", "Octillion", "Nonillion", "Decillion", "Undecillion", "Duodecillion", "Tredecillion", "Quattuordecillion", "Quindecillion", "Sexdecillion", "Septendecillion", "Octodecillion", "Novemdecillion", "Vigintillion", "Googol", "Centillion"),
-                shorthand=c("k", "m", "b", "t", "q", "qt", "sx", "sp", "ot", "n", "d", "u", "dd", "td", "qtd", "qd", "sxd", "spd", "otd", "nd", "vg", "g", "ct"),
-                exponent=c(3, 6, 9, 12, 15, 18, 21, 24, 27, 30, 33, 36, 39, 42, 45, 48, 51, 54, 57, 60, 63, 100, 303),
-                stringsAsFactors=F
+  name=c("Thousand", "Million", "Billion", "Trillion", "Quadrillion", "Quintillion", "Sextillion", "Septillion", "Octillion", "Nonillion", "Decillion", "Undecillion", "Duodecillion", "Tredecillion", "Quattuordecillion", "Quindecillion", "Sexdecillion", "Septendecillion", "Octodecillion", "Novemdecillion", "Vigintillion", "Googol", "Centillion"),
+  shorthand=c("k", "m", "b", "t", "q", "qt", "sx", "sp", "ot", "n", "d", "u", "dd", "td", "qtd", "qd", "sxd", "spd", "otd", "nd", "vg", "g", "ct"),
+  exponent=c(3, 6, 9, 12, 15, 18, 21, 24, 27, 30, 33, 36, 39, 42, 45, 48, 51, 54, 57, 60, 63, 100, 303),
+  stringsAsFactors=F
 )
 
 
@@ -23,6 +23,9 @@
 #' Additional arguments
 #' @param digits 
 #' The number of decimal digits to retain.
+#' 
+#' @return
+#' An object of class \code{approx}.
 #' 
 #' @examples
 #' \dontrun{
@@ -97,24 +100,18 @@ approx.size <- function(x, unit.names="long", ..., digits=1)
     unit <- ""
   }
   
-#  ret <- new("approx", size=x, printsize=printsize, unit=unit, unit.names=unit.names)
-  
   ret <- paste(printsize, unit, sep=sepchar)
-  
   class(ret) <- "approx"
   
-  return( ret )
+  return(ret)
 }
 
 
 
-#' @title Print approx objects.
-#' 
-#' @param x 
-#' An approx object.
-#' @param ... 
-#' Additional arguments (ignored).
-#' 
+#' @title Print \code{approx} objects
+#' @description Printing for \code{approx.size()} 
+#' @param x \code{approx} object
+#' @param ... unused
 #' @name print-approx
 #' @rdname print-approx
 #' @method print approx
@@ -123,4 +120,3 @@ print.approx <- function(x, ...)
 {
   cat(paste(paste(x, collapse=" "), "\n"))
 }
-
