@@ -1,4 +1,4 @@
-% Generated by roxygen2 (4.1.1): do not edit by hand
+% Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/accessors.r
 \docType{methods}
 \name{Accessors}
@@ -64,6 +64,7 @@ unit(x)
 unit.prefix(x)
 unit.names(x)
 }
+
 }
 \seealso{
 \code{ \link{memuse-class} \link{Replacers} }
