@@ -1,4 +1,4 @@
-% Generated by roxygen2 (4.1.1): do not edit by hand
+% Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/approx.r
 \name{approx.size}
 \alias{approx.size}
@@ -16,6 +16,9 @@ reads like "10 million", "10m", or "10,000,000", respectively.}
 
 \item{digits}{The number of decimal digits to retain.}
 }
+\value{
+An object of class \code{approx}.
+}
 \description{
 Approximate size of an integer; a poor man's exponential notation.
 }
@@ -29,6 +32,7 @@ library(memuse)
 approx.size(12345678)
 approx.size(12345678, unit.names="comma")
 }
+
 }
 \seealso{
 \code{\link{howmany}}
