@@ -1,4 +1,4 @@
-% Generated by roxygen2 (4.1.1): do not edit by hand
+% Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/arith.r
 \docType{methods}
 \name{Arithmetic}
@@ -75,7 +75,7 @@
 \S4method{^}{memuse,numeric}(e1, e2)
 }
 \arguments{
-\item{e1,e2}{\code{memuse}, \code{numeric}, or \code{object_size} objects.}
+\item{e1, e2}{\code{memuse}, \code{numeric}, or \code{object_size} objects.}
 }
 \value{
 Returns a \code{memuse} class object.
@@ -99,6 +99,7 @@ x*y
 x/y
 x^2
 }
+
 }
 \seealso{
 \code{ \link{Constructor}, \link{memuse-class} }
