@@ -1,4 +1,4 @@
-% Generated by roxygen2 (4.1.1): do not edit by hand
+% Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/meminfo.r
 \name{cachelinesize}
 \alias{Sys.cachelinesize}
@@ -23,6 +23,7 @@ library(memuse)
 
 Sys.cachelinesize()
 }
+
 }
 \seealso{
 \code{\link{meminfo}}
