@@ -1,4 +1,4 @@
-% Generated by roxygen2 (4.1.1): do not edit by hand
+% Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/comparators.r
 \docType{methods}
 \name{Comparators}
@@ -60,7 +60,7 @@
 \S4method{!=}{numeric,memuse}(e1, e2)
 }
 \arguments{
-\item{e1,e2}{\code{memuse}, \code{numeric}, or \code{object_size} objects.}
+\item{e1, e2}{\code{memuse}, \code{numeric}, or \code{object_size} objects.}
 }
 \value{
 Returns a \code{memuse} class object.
@@ -83,6 +83,7 @@ x >= y
 x == y
 x != y
 }
+
 }
 \seealso{
 \code{ \link{Constructor}, \link{memuse-class} }
