@@ -1,4 +1,4 @@
-% Generated by roxygen2 (4.1.1): do not edit by hand
+% Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/constructor.r
 \docType{methods}
 \name{Constructor}
@@ -88,6 +88,7 @@ y
 ### Use the memory usage of object 'size'
 memuse(rnorm(1e4))
 }
+
 }
 \seealso{
 \code{ \link{memuse-class} \link{Accessors} \link{Converters} }
