@@ -1,4 +1,4 @@
-% Generated by roxygen2 (4.1.1): do not edit by hand
+% Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/data.r
 \docType{data}
 \name{Control Variables}
@@ -9,8 +9,7 @@
 \alias{Control}
 \alias{Control Variables}
 \title{Control Variables for the memuse Package.}
-\format{\preformatted{ chr "best"
-}}
+\format{An object of class \code{character} of length 1.}
 \usage{
 .UNIT
 
@@ -57,6 +56,7 @@ mu(2000)
 .PREFIX <- "SI"
 mu(2000)
 }
+
 }
 \seealso{
 \code{ \link{memuse-class} \link{Constructor} }
