@@ -1,4 +1,4 @@
-% Generated by roxygen2 (4.1.1): do not edit by hand
+% Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/converters.r
 \docType{methods}
 \name{Converters}
@@ -62,6 +62,7 @@ the unit is ignored, and so "100 kib" would be valid as well.
 \dontrun{
 as.memuse(10)
 }
+
 }
 \seealso{
 \code{ \link{memuse-class} \link{Accessors} }
