@@ -1,4 +1,4 @@
-% Generated by roxygen2 (4.1.1): do not edit by hand
+% Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/meminfo.r
 \name{filesize}
 \alias{Sys.filesize}
@@ -34,5 +34,6 @@ saveRDS(x, file=tmp)
 Sys.filesize(tmp) ### size on disk
 unlink(tmp)
 }
+
 }
 
