@@ -1,4 +1,4 @@
-% Generated by roxygen2 (4.1.1): do not edit by hand
+% Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/howbig.r
 \name{howbig}
 \alias{howbig}
@@ -14,7 +14,7 @@ howbig.par(nrow, ncol, cores = 1, par = "balanced", unit = .UNIT,
   intsize = 4, ICTXT = 0, bldim = c(4, 4))
 }
 \arguments{
-\item{nrow,ncol}{Number of (global) rows/columns of the matrix.}
+\item{nrow, ncol}{Number of (global) rows/columns of the matrix.}
 
 \item{representation}{The kind of storage the object would be in, i.e. "dense" or "sparse".}
 
@@ -51,7 +51,7 @@ load-balanced block partitioning.}
 \item{bldim}{Blocking factor for block-cyclically decomposed (dmat) data.}
 }
 \value{
-\code{howbig()}
+\code{howbig()} 
 returns a \code{memuse} class object.
 
 \code{howbig.par()} returns a list of 2 elements, each of class
@@ -74,6 +74,7 @@ distributed analogue.  The latter returns the memory usage of a
 # size of a 1000x1000 matrix
 howbig(1000, 1000)
 }
+
 }
 \seealso{
 \code{\link{howmany}}
