@@ -1,4 +1,4 @@
-% Generated by roxygen2 (4.1.1): do not edit by hand
+% Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/howmany.r
 \name{howmany}
 \alias{howmany}
@@ -14,7 +14,7 @@ howmany.par(x, nrow, ncol, out.type = "full", cores = 1, par = "row", ...,
 \arguments{
 \item{x}{The size of a matrix stored as a \code{memuse} class object.}
 
-\item{nrow,ncol}{Number of (global) rows/columns of the matrix.}
+\item{nrow, ncol}{Number of (global) rows/columns of the matrix.}
 
 \item{out.type}{If the full dimensions or a reduced representation should be
 returned (see Details section below). Options are "full" and "approximate"
@@ -83,6 +83,7 @@ howmany(x)
 # same, but ballpark figure
 howmany(mu(1, "gib"), out.type="approx")
 }
+
 }
 \seealso{
 \code{\link{howbig}}
