@@ -1,4 +1,4 @@
-% Generated by roxygen2 (4.1.1): do not edit by hand
+% Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/memuse-package.R
 \docType{package}
 \name{memuse-package}
@@ -14,13 +14,13 @@ usage of the current R process, as well as some other niceties.
 If you do a lot of benchmarking, this is the package you've been waiting
 for.  Maybe.  I mean, I don't want to be too pushy about it.
 
-\tabular{ll}{
-   Package: \tab memuse \cr
-   Type: \tab Package \cr
-   License: \tab GPL (>= 2) \cr
-   LazyData: \tab yes \cr
-   LazyLoad: \tab yes \cr
-   NeedsCompilation: \tab yes
+\tabular{ll}{ 
+   Package: \tab memuse \cr 
+   Type: \tab Package \cr 
+   License: \tab GPL (>= 2) \cr 
+   LazyData: \tab yes \cr 
+   LazyLoad: \tab yes \cr 
+   NeedsCompilation: \tab yes 
 }
 }
 \author{
