@@ -1,18 +1,18 @@
-% Generated by roxygen2 (4.1.1): do not edit by hand
+% Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/approx.r
 \name{print-approx}
 \alias{print-approx}
 \alias{print.approx}
-\title{Print approx objects.}
+\title{Print \code{approx} objects}
 \usage{
 \method{print}{approx}(x, ...)
 }
 \arguments{
-\item{x}{An approx object.}
+\item{x}{\code{approx} object}
 
-\item{...}{Additional arguments (ignored).}
+\item{...}{unused}
 }
 \description{
-Print approx objects.
+Printing for \code{approx.size()}
 }
 
