@@ -1,9 +1,9 @@
-% Generated by roxygen2 (4.1.1): do not edit by hand
+% Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/print.r
 \docType{methods}
-\name{Print}
-\alias{Print}
+\name{print-memuse}
 \alias{print,memuse-method}
+\alias{print-memuse}
 \alias{show,memuse-method}
 \title{Printing}
 \usage{
@@ -13,7 +13,7 @@
 \S4method{show}{memuse}(object)
 }
 \arguments{
-\item{x,object}{\code{memuse} class object}
+\item{x, object}{\code{memuse} class object}
 
 \item{...}{extra arguments}
 
@@ -27,9 +27,6 @@ defaults to \code{x}'s unit.names}
 
 \item{digits}{the number of decimal digits to print; default is 3}
 }
-\value{
-Returns a string.
-}
 \description{
 Print and show methods for \code{memuse} class objects.
 }
@@ -40,6 +37,7 @@ x <- mu(1e6)
 print(x)
 x # same as show(x)
 }
+
 }
 \seealso{
 \code{\ link{Constructor} \link{memuse-class} }
