@@ -1,18 +1,18 @@
-% Generated by roxygen2 (4.1.1): do not edit by hand
+% Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/meminfo.r
 \name{print-sysinfo}
 \alias{print-sysinfo}
 \alias{print.sysinfo}
-\title{Print sysinfo objects.}
+\title{Print \code{sysinfo} objects}
 \usage{
 \method{print}{sysinfo}(x, ...)
 }
 \arguments{
-\item{x}{An sysinfo object.}
+\item{x}{\code{sysinfo} object}
 
-\item{...}{Additional arguments (ignored).}
+\item{...}{unused}
 }
 \description{
-Print sysinfo objects.
+Printing for \code{sysinfo} objects.
 }
 
