@@ -1,4 +1,4 @@
-% Generated by roxygen2 (4.1.1): do not edit by hand
+% Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/meminfo.r
 \name{procmem}
 \alias{Sys.procmem}
@@ -42,6 +42,7 @@ rm(x)
 gc(FALSE)
 Sys.procmem()
 }
+
 }
 \seealso{
 \code{\link{meminfo}}
