@@ -1,4 +1,4 @@
-% Generated by roxygen2 (4.1.1): do not edit by hand
+% Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/accessors.r
 \docType{methods}
 \name{Replacers}
@@ -58,6 +58,7 @@ x
 size(x) <- 1000
 x
 }
+
 }
 \seealso{
 \code{ \link{Accessors} \link{memuse-class} }
