@@ -1,4 +1,4 @@
-% Generated by roxygen2 (4.1.1): do not edit by hand
+% Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/sum.r
 \docType{methods}
 \name{Reductions}
@@ -32,6 +32,7 @@ sum(mu(10), 10)
 ### This will not
 sum(10, mu(10))
 }
+
 }
 \seealso{
 \code{ \link{Constructor} \link{memuse-class} }
