@@ -1,4 +1,4 @@
-% Generated by roxygen2 (4.1.1): do not edit by hand
+% Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/meminfo.r
 \name{swapinfo}
 \alias{Sys.pageinfo}
@@ -33,6 +33,7 @@ library(memuse)
 
 Sys.swapinfo()
 }
+
 }
 \seealso{
 \code{\link{procmem}}
