@@ -1,4 +1,4 @@
-% Generated by roxygen2 (4.1.1): do not edit by hand
+% Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/swap.r
 \docType{methods}
 \name{Swaps}
@@ -59,6 +59,7 @@ swap.prefix(x)
 swap.names(x)
 swap.unit(x, "bytes")
 }
+
 }
 \seealso{
 \code{ \link{Constructor} \link{memuse-class} }
